	state in whc(1).
2017-09-22 Fred Gleason <fredg@paravelsystems.com>
	* Added 'conf/logrotate-http-sample'.
2017-09-22 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.0.
2017-09-22 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'webhound.spec.in' that caused installation of
	the default configuration file to fail for the 'server' sub-package.
2017-09-22 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.1.
2017-09-22 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'qt-mysql' dependency to the 'server' sub-package.
2017-09-22 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in the 'Edit Program' dialog in whc(1) that caused the
	'User Agent' field to fail to be blanked out when creating a new
	program entry.
2017-09-22 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.2.
2019-08-02 Fred Gleason <fredg@paravelsystems.com>
	* Made the 'List Hosts' dialog sortable.
2019-08-02 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the packag version to 0.6.3.
2019-08-07 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in whprocess(1) that caused details of the user agent
	to fail to be saved to the database when updating an existing host
	record.
	* Added a '--log-to-syslog=' switch to whprocess(1).
2019-08-07 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the packag version to 0.7.0.
2019-08-27 Fred Gleason <fredg@paravelsystems.com>
	* Added a filter to the 'List Hosts' dialog.
2019-08-27 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.8.0.
2019-08-29 Fred Gleason <fredg@paravelsystems.com>
	* Added a unique index 'IP_ADDRESS_IDX(IP_ADDRESS,PROGRAM_ID)' to
	the 'HOSTS' table.
	* Incremented the database version to 5.
	* Modified whprocess(1) to include the 'HOSTS.NAME' column
	when updating an existing record.
2019-08-29 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.8.1.