@@ -2,7 +2,7 @@
 ##
 ## Makefile for the whc(1) management client for WebHound
 ##
-## (C) Copyright 2017 Fred Gleason <fredg@paravelsystems.com>
+## (C) Copyright 2017-2019 Fred Gleason <fredg@paravelsystems.com>
 ##
 ##   This program is free software; you can redistribute it and/or modify
 ##   it under the terms of the GNU General Public License version 2 as
@@ -40,6 +40,7 @@ dist_whc_SOURCES = accessor.cpp accessor.h\
                    showlogline.cpp showlogline.h\
                    sqltablemodel.cpp sqltablemodel.h\
                    tableview.cpp tableview.h\
+                   textfile.cpp textfile.h\
                    whc.cpp whc.h
 
 nodist_whc_SOURCES = cmdswitch.cpp cmdswitch.h\
